deployment/k8s/r-pipeline-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: r-pipelines
  namespace: r-pipelines-workshop
  labels:
    app: r-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: r-pipelines
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: r-pipelines
    spec:
      containers:
        - image: ghcr.io/plant-food-research-open/shiny-rpipelines:0.1.0
          imagePullPolicy: Always
          name: shiny
        - image: postgres:15.3-bullseye
          imagePullPolicy: Always
          name: postgres
        - image: minio/minio:RELEASE.2023-05-27T05-56-19Z
          imagePullPolicy: Always
          name: minio
          workingDir: /data
          args:
            - server
            - --console-address
            - :9001
            - --address
            - :9000
            - /data
      restartPolicy: Always
      # volumes:
      #   - name: vol-r-pipelines-minio
      #     persistentVolumeClaim:
      #       claimName: vol-r-pipeline-minio
