deployment/k8s/r-pipeline-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: r-pipelines
  namespace: r-pipelines-workshop
  labels:
    app: r-pipelines
spec:
  selector:
    app: r-pipelines
  type: LoadBalancer
  ports:
    - name: port-5432
      protocol: TCP
      port: 5432
      targetPort: 5432
    - name: port-9000
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: port-9001
      protocol: TCP
      port: 9001
      targetPort: 9001
    - name: port-3838
      protocol: TCP
      port: 3838
      targetPort: 3838
